--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <!-- We link the style page -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <!-- We link the font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
       <button id="button">Button</button>
     </div>
     <div class="home-img">
-      <img src="/img/skate1.png">
+      <img src="./img/skate1.png">
     </div>
     <section id="section1">
       <div id="parts">
@@ -53,17 +53,17 @@
       </div>
       <div id="div-imgs">
         <div id="div1">
-          <img src="/img/1.jpg" alt="imagen1">
+          <img src="./img/1.jpg" alt="imagen1">
           <p>Body text for whatever you'd like to add more to the subheading.</p>
         </div>
 
         <div id="div2">
-          <img src="/img/2.jpg" alt="imagen2">
+          <img src="./img/2.jpg" alt="imagen2">
           <p>Body text for whatever you'd like to expand on the main point.</p>
         </div>
 
         <div id="div3">
-          <img src="/img/3.png" alt="imagen3">
+          <img src="./img/3.png" alt="imagen3">
           <p>Body text for whatever you'd like to share more.</p>
         </div>
       </div>
@@ -80,13 +80,13 @@
             </p>
             <button id="legends">See the legends</button>
           </div>
-          <img src="/img/story.jpg" alt="Skateboarding history" class="story-img">
+          <img src="./img/story.jpg" alt="Skateboarding history" class="story-img">
         </div>
         <section class="important-decades">
           <h2 class="decades-title">Important Decades</h2>
           <div class="decades-container">
             <div class="decade-box">
-              <img src="/img/5.jpg" alt="Skateboarding in the 80s" class="decade-img">
+              <img src="./img/5.jpg" alt="Skateboarding in the 80s" class="decade-img">
               <h3 class="decade-subtitle">80’s</h3>
               <p class="decade-text">
                 In 1981, the <a href="#">“Thrasher Magazine”</a> was founded and since then, this magazine stands for
@@ -97,7 +97,7 @@
               </p>
             </div>
             <div class="decade-box">
-              <img src="/img/4.png" alt="Skateboarding in the 90s" class="decade-img">
+              <img src="./img/4.png" alt="Skateboarding in the 90s" class="decade-img">
               <h3 class="decade-subtitle">90’s</h3>
               <p class="decade-text">
                 From the mid-1990s, the modern skateboarding experienced a next high phase, which continues until today.
